[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/TestLevel/TestScoring.gd" type="Script" id=1]
[ext_resource path="res://Scenes/TestLevel/TestAPIClient.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Clock/Clock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Managers/SentenceBuilder/SentenceBuilder.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=3]
resource_name = "HideTimer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Clock:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Clock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Clock:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Clock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "ShowTimer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Clock:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Clock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="BaseTestLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
good_word_color = Color( 0.364706, 1, 0.447059, 1 )
bad_word_color = Color( 1, 0.45098, 0.45098, 1 )
entity_name_color = Color( 0.556863, 0.564706, 1, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0
custom_constants/separation = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 536.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
custom_constants/separation = 32

[node name="FeedSheepButton" type="Button" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
text = "Feed Sheep Grass"

[node name="PoisonSheepButton" type="Button" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 72.0
text = "Feed Sheep Poison"

[node name="BuildSheepButton" type="Button" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 124.0
text = "Build Sheep"

[node name="EndDayButton" type="Button" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 176.0
text = "End Day"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 200.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 60 )

[node name="Clock" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
shadow_color = Color( 0, 0, 0, 0 )
wait_time = 20.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 580.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SheepCountLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_right = 316.0
margin_bottom = 14.0
text = "Current Sheep: 0"

[node name="HungerCountLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 316.0
margin_bottom = 32.0
text = "Hungry Sheep: 0"

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 316.0
margin_bottom = 50.0
text = "Level Events:"

[node name="LevelEventsLabel" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 316.0
margin_bottom = 536.0
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 644.0
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 316.0
margin_bottom = 14.0
text = "Android Dreams:"

[node name="DreamsLabel" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 316.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="GoodWordsCountLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
margin_top = 486.0
margin_right = 316.0
margin_bottom = 500.0

[node name="BadWordsCountLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
margin_top = 504.0
margin_right = 316.0
margin_bottom = 518.0

[node name="EntityEncounterCountLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
margin_top = 522.0
margin_right = 316.0
margin_bottom = 536.0

[node name="APIClient" type="Node" parent="."]
script = ExtResource( 2 )

[node name="SentenceBuilder" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HideTimer = SubResource( 3 )
anims/RESET = SubResource( 1 )
anims/ShowTimer = SubResource( 2 )

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/FeedSheepButton" to="." method="_on_FeedSheepButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/PoisonSheepButton" to="." method="_on_PoisonSheepButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/BuildSheepButton" to="." method="_on_BuildSheepButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/EndDayButton" to="." method="_on_EndDayButton_pressed"]
[connection signal="dream_recollected" from="APIClient" to="." method="_on_APIClient_dream_recollected"]
